Enhance instructions for reviewing board game PRs
Added review guidelines for board game player aid.

--- a/.github/instructions/*.instructions.md
+++ b/.github/instructions/*.instructions.md
@@ -2,3 +2,4 @@ Help review the board game player aid that is being added as a PR, this modellin
 
 - Review the contributing.md file to consider what is missing
 - Consider recommending other langauge editions as an option
+- Review against official rules and play aids of the game under review for missing rules, cards, components, context.
